@@ -4,6 +4,7 @@ import org.springframework.stereotype.Component;
 import ru.rrenat358.api.core.ProductDto;
 import ru.rrenat358.core.exceptions.FieldValidationException;
 
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -15,10 +16,12 @@ public class ProductValidator {
 
         List<String> errorMessages = new ArrayList<>();
 
-        if (productDto.getTitle().trim().isEmpty()) {
+        //todo !null
+        if (productDto.getTitle().isBlank()) {
             errorMessages.add("Имя отсутствует !!!");
         }
-        if (productDto.getPrice() < 0) {
+//        if (productDto.getPrice() < 0) {
+        if (productDto.getPrice().compareTo(BigDecimal.ZERO) < 0) {
             errorMessages.add("Цена < 0 !!!");
         }
 
